Update my webpage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- ########### TODO ########### -->
     <!-- enter your name in the title -->
-    <title>___________'s Homepage</title>
+    <title>Laura's Homepage</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -16,29 +16,32 @@
     <header>
         <!-- ############## TODO ############## -->
         <!-- enter your name also in the header -->
-        <h1>Personal Page of ___________</h1>
+        <h1>Personal Page of Laura!</h1>
     </header>
     <section class="introduction">
         <!-- ############################ TODO ############################ -->
         <!-- replace with the URL to your personal image. see instructions. -->
-        <img src="url/to/your/image" alt="a pretty photo of myself">
+        <img src="https://www.facebook.com/photo.php?fbid=10110384304477401&set=t.2036401&type=3&theater" alt="a pretty photo of myself">
         <div>
             <h1>About Me</h1>
             <!-- ########### TODO ########### -->
-            <p>Introduce yourself! :)</p>
+            <p>I am a Puerto Rican living in Florida. Currently traveing through Spain while learning Python. I value efficiency and accuracy in and out of my professional life.</p>
         </div>
     </section>
     <section>
         <h1>Why learn programming?</h1>
         <!-- ########### TODO ########### -->
-        <p>Write out your personal motivations for joining this course.</p>
+        <p>1. I've always wanted to learn to build a website from scratch.
+2. I am at a turning point in my career and looking for inspiration.
+3. I chose Python instead of Java or Javascript based class because I am also interested in its data science and AI/Machine learning applications.
+4. I find an in-person bootcamp valuable to meet other like-minded people and learn from their paths. I have also always wanted to live in Barcelona so I feel this is a perfect fit!</p>
     </section>
     <footer>
         <!-- ########################## TODO ########################## -->
         <!-- replace the last parts of the URLs with your personal info -->
-        <a href="https://github.com/your-github-username">GitHub</a>
-        <a href="https://www.linkedin.com/in/your-linkedin-handle">LinkedIN</a>
-        <a href="https://twitter.com/your-twitter-handle">Twitter</a>
+        <a href="https://github.com/lauramayol">GitHub</a>
+        <a href="https://www.linkedin.com/in/laura-mayol-vargas">LinkedIN</a>
+        <a href="https://twitter.com/mayolvargas">Twitter</a>
     </footer>
 </body>
 </html>
