fix: updated image and added line breaks

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="introduction">
         <!-- ############################ TODO ############################ -->
         <!-- replace with the URL to your personal image. see instructions. -->
-        <img src="https://www.facebook.com/photo.php?fbid=10110384304477401&set=t.2036401&type=3&theater" alt="a pretty photo of myself">
+        <img src="my first webpage image.jpg" alt="a pretty photo of myself">
         <div>
             <h1>About Me</h1>
             <!-- ########### TODO ########### -->
@@ -31,9 +31,9 @@
     <section>
         <h1>Why learn programming?</h1>
         <!-- ########### TODO ########### -->
-        <p>1. I've always wanted to learn to build a website from scratch.
-2. I am at a turning point in my career and looking for inspiration.
-3. I chose Python instead of Java or Javascript based class because I am also interested in its data science and AI/Machine learning applications.
+        <p>1. I've always wanted to learn to build a website from scratch.<br><br>
+2. I am at a turning point in my career and looking for inspiration.<br><br>
+3. I chose Python instead of Java or Javascript based class because I am also interested in its data science and AI/Machine learning applications.<br><br>
 4. I find an in-person bootcamp valuable to meet other like-minded people and learn from their paths. I have also always wanted to live in Barcelona so I feel this is a perfect fit!</p>
     </section>
     <footer>
