Update index to link to additional sections
Barcelona.html and python.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <!-- <nav> contains links that will allow us to navigate on the page -->
     <nav>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="blog.html">Blog</a>
+        <a href="python.html">Python Blog</a>
+        <a href="barcelona.html">Barcelona Blog</a>
         <a href="index.html">About</a>
     </nav>
     <header>
